--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "firebase": "^9.6.10",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "ng-zorro-antd": "^13.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -30,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.1",
-    "@angular/cli": "~13.3.1",
+    "@angular/cli": "^12.0.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
