--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,5 @@ Thumbs.db
 .firebase
 *-debug.log
 .runtimeconfig.json
-src/environments/environment.prod.ts
-src/environments/environment.ts
+*environment.prod.ts
+*environment.ts
