--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.0.0 || ^14.0.0-0",
+    "@angular/animations": "~13.3.2",
     "@angular/cdk": "^13.3.2",
-    "@angular/cli": "^12.0.0",
+    "@angular/common": "~13.3.2",
+    "@angular/compiler": "~13.3.2",
+    "@angular/core": "~13.3.2",
     "@angular/fire": "^7.3.0",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "^13.0.0 || ^14.0.0-0",
+    "@angular/forms": "~13.3.2",
     "@angular/material": "^13.3.2",
-    "@angular/platform-browser-dynamic": "^13.3.2",
+    "@angular/platform-browser": "~13.3.2",
+    "@angular/platform-browser-dynamic": "~13.3.2",
+    "@angular/router": "~13.3.2",
     "firebase": "^9.6.10",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "ng-zorro-antd": "^13.1.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.2",
-    "@types/jasmine": "~4.0.2",
-    "@types/node": "^17.0.23",
+    "@angular-devkit/build-angular": "~13.3.2",
+    "@angular/cli": "^13.3.2",
+    "@angular/compiler-cli": "~13.3.2",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
   }
