--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "ng-zorro-antd": "^13.1.1",
+    "pdfmake": "^0.2.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
