--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "ng-zorro-antd": "^13.1.1",
+    "ngx-mask": "^13.1.10",
     "pdfmake": "^0.2.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.2",
-    "@angular/cli": "^13.3.2",
+    "@angular/cli": "^13.3.3",
     "@angular/compiler-cli": "~13.3.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
