--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~13.3.2",
     "@angular/platform-browser-dynamic": "~13.3.2",
     "@angular/router": "~13.3.2",
+    "@ngneat/input-mask": "^5.2.0",
     "firebase": "^9.6.10",
+    "inputmask": "^5.0.7",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "ng-zorro-antd": "^13.1.1",
@@ -34,6 +36,7 @@
     "@angular-devkit/build-angular": "~13.3.2",
     "@angular/cli": "^13.3.3",
     "@angular/compiler-cli": "~13.3.2",
+    "@types/inputmask": "^5.0.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
