--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install
-    - run: npm install -g @angular/cli
-    - run: ng serve
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
